--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.7",
-    "@types/react-router-dom": "^5.1.5"
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.0"
   }
 }
