--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:e2e": "npx cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^4.8.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
