--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "test:e2e": "npx cypress open"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "standard",
+      "standard-react"
+    ]
   },
   "browserslist": {
     "production": [
@@ -47,10 +50,19 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^4.8.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.0"
+    "@types/styled-components": "^5.1.0",
+    "babel-eslint": "^10.1.0",
+    "cypress": "^4.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-react": "^9.2.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^2.0.5"
   }
 }
