--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "husky": "^4.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -49,6 +50,9 @@
       "last 1 safari version"
     ]
   },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx}": "eslint"
+  },
   "devDependencies": {
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.7",
@@ -63,6 +67,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-standard": "^4.0.1",
+    "lint-staged": "^10.2.9",
     "prettier": "^2.0.5"
   }
 }
